# re_platform2.0

./: .env  .env.example  .gitignore  CLAUDE.md  DATABASE_MANAGEMENT.md  PROJECT_STATUS.md  README.md  alembic.ini  docker-compose.yml  next.config.js  package-lock.json  package.json  prisma-sync-guide.md  pyproject.toml  tailwind.config.ts  test-auth.sh  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
.github/workflows/: nyc-api-ci.yml  nyc-api-health.yml  nyc-api-integration.yml  nyc-api-performance.yml
backend/: run.py
backend/app/: main.py
backend/app/core/: config.py  database.py  deps.py  security.py
backend/app/models/: user.py
backend/app/schemas/: token.py  user.py
backend/app/services/: auth_service.py
backend/migrations/: env.py
backend/migrations/versions/: 3cd8d27f3701_initial_migration_create_users_table.py
backend/scripts/: seed_admin.py
backend/tests/: conftest.py  test_auth.py  test_simple.py
docker/: backup-database.sh  docker-compose.yml  restore-database.sh
docker/postgres-init/init/: 01-init.sql
docs/: ADMIN_PROGRESS_BARS.md  API_ROUTES.md  ARCHITECTURE.md  DATABASE.md  DECISIONS.md  FRONTEND_DESIGN.md  NYC_DATA_COVERAGE_ANALYSIS.md  SECURITY.md  SESSION_LOG_2024-12-18.md  UI_COMPONENTS.md
mac-switching/: db-status.sh  switch-to-local.sh  switch-to-mac-mini.sh  sync-from-mac-mini.sh  sync-to-mac-mini.sh
prisma/: schema-nyc-data.prisma  schema.prisma
scripts/: aggressive-construction-sync.js  data-quality-analysis.js  import-gems.js  initialize-dataset-configs.js
src/app/: globals.css  layout.tsx
src/app/admin/: layout.tsx  page.tsx
src/components/: DatasetDiscoveryModal.tsx  NYCDataLogs.tsx  ProgressBar.tsx  SyncProgressBar.tsx
src/hooks/: useProgressPolling.ts
src/lib/: audit.ts  auth.ts  db.ts  errors.ts  jwt.ts  middleware.ts  password.ts  utils.ts
src/lib/data-sources/: mock-property-generator.ts  nyc-open-data.ts
src/lib/repositories/: market-repository.ts  portfolio-repository.ts  property-repository.ts  user-repository.ts
src/lib/services/: census-api-client.ts  census-data-ingestion-service.ts  data-ingestion-service.ts  nyc-data-freshness-service.ts  (+4 more)
src/types/: api.ts  auth.ts  market.ts  portfolio.ts  property.ts
tests/: nyc-open-data.test.ts  setup.ts
(+40 files in other folders)
